Makefile: `all` and `install` are `PHONY`
cf https://coq.zulipchat.com/#narrow/channel/237656-Coq-devs-.26-plugin-devs/topic/stdlib.20broken.20on.20Mac/near/503140259

--- a/theories/Makefile
+++ b/theories/Makefile
@@ -3,9 +3,11 @@ ROCQMAKEFILE?=$(ROCQBIN)rocq makefile
 ROCQMAKEOPTIONS?=
 ROCQMAKEFILEOPTIONS?=
 
+.PHONY: all
 all: Makefile.coq
 	+$(MAKE) -f $< $(ROCQMAKEOPTIONS)
 
+.PHONY: install
 install: Makefile.coq
 	+$(MAKE) -f $< $(ROCQMAKEOPTIONS) install
 
