--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -262,6 +262,7 @@ through the <tt>From Stdlib Require Import</tt> command.</p>
     theories/ZArith/Zpow_def.v
     theories/ZArith/Zdiv.v
     theories/ZArith/Znumtheory.v
+    theories/ZArith/Zdivisibility.v
   </dd>
 
   <dt> <a name="arith"></a><b>Arith</b>:
