--- a/theories/dune
+++ b/theories/dune
@@ -7,3 +7,8 @@
  (dev
   (coq
    (flags :standard -w +default))))
+
+(rule
+ (targets All.v)
+ (deps All.sh (source_tree .))
+ (action (with-stdout-to %{targets} (run env sh ./All.sh))))
