--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -35,7 +35,7 @@ jobs:
       with:
         branch: ${{ matrix.alpine }}
         extra-repositories: https://dl-cdn.alpinelinux.org/alpine/edge/testing
-        packages: rocq dune  bash python3 graphviz  make
+        packages: rocq dune  bash python3 graphviz  make findutils diffutils grep rsync
     - name: 'dune build @stdlib-html # depends on stdlib'
       shell: alpine.sh {0}
       run: 'dune build @stdlib-html # depends on stdlib'
@@ -49,7 +49,6 @@ jobs:
     - name: Check for duplicate files
       shell: alpine.sh {0}
       run: dev/tools/check-duplicate-files.sh
-    - name: 'COQEXTRAFLAGS=... make -C test-suite -j -k'
+    - name: 'make -j -k test-suite'
       shell: alpine.sh {0}
-      run: 'COQEXTRAFLAGS="-Q _build/install/default/lib/coq/user-contrib/Stdlib/ Stdlib" make -C test-suite -j -k'
-      continue-on-error: true
+      run: 'make -j -k test-suite'
