All.sh is a bash script (fix rocq CI)

--- a/theories/dune
+++ b/theories/dune
@@ -11,4 +11,4 @@
 (rule
  (targets All.v)
  (deps All.sh (source_tree .))
- (action (with-stdout-to %{targets} (run env sh ./All.sh))))
+ (action (with-stdout-to %{targets} (run env bash ./All.sh))))
