Adapt to https://github.com/rocq-prover/rocq/pull/20855

--- a/theories/dune
+++ b/theories/dune
@@ -6,7 +6,8 @@
 (env
  (dev
   (coq
-   (flags :standard))))
+   ;; see theories/_CoqProject for details
+   (flags :standard -w -notation-for-abbreviation -w -ltac2-notation-for-abbreviation))))
 
 (rule
  (targets All.v)
