--- a/.github/workflows/nix-action-rocq-master.yml
+++ b/.github/workflows/nix-action-rocq-master.yml
@@ -7484,7 +7484,8 @@ jobs:
   vst:
     needs:
     - coq
-    - flocq
+    - ITree
+    - compcert
     runs-on: ubuntu-latest
     steps:
     - name: Determine which commit to initially checkout
@@ -7538,9 +7539,13 @@ jobs:
       run: NIXPKGS_ALLOW_UNFREE=1 nix-build --no-out-link --argstr bundle "rocq-master"
         --argstr job "coq"
     - if: steps.stepCheck.outputs.status != 'fetched'
-      name: 'Building/fetching previous CI target: flocq'
+      name: 'Building/fetching previous CI target: ITree'
       run: NIXPKGS_ALLOW_UNFREE=1 nix-build --no-out-link --argstr bundle "rocq-master"
-        --argstr job "flocq"
+        --argstr job "ITree"
+    - if: steps.stepCheck.outputs.status != 'fetched'
+      name: 'Building/fetching previous CI target: compcert'
+      run: NIXPKGS_ALLOW_UNFREE=1 nix-build --no-out-link --argstr bundle "rocq-master"
+        --argstr job "compcert"
     - if: steps.stepCheck.outputs.status != 'fetched'
       name: Building/fetching current CI target
       run: NIXPKGS_ALLOW_UNFREE=1 nix-build --no-out-link --argstr bundle "rocq-master"
