[stdlib] Restore warning-free build.

--- a/theories/dune
+++ b/theories/dune
@@ -4,6 +4,17 @@
 (coq.theory
  (name Stdlib)
  (package rocq-stdlib)
+ (flags
+   :standard
+   -w -missing-scheme
+   -w -deprecated-exact-proof
+   -w -deprecated-end-tac
+   -w -implicit-create-hint-db
+   -w -closed-notation-not-level-0
+   -w -notation-for-abbreviation
+   -w -implicit-create-rewrite-hint-db
+   -w -notation-for-abbreviation
+   -w -postfix-notation-not-level-1)
  (modules :standard \ All))
 
 (env
